# Aquarium-Controller-ESP32P4

./: .gitignore  CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
.github/workflows/: build.yml
android/: gradle.properties  gradlew  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/aquarium/controller/: AquariumApp.kt  MainActivity.kt  MainViewModel.kt
android/app/src/main/java/com/aquarium/controller/data/api/: AquariumApi.kt
android/app/src/main/java/com/aquarium/controller/data/model/: Models.kt
android/app/src/main/java/com/aquarium/controller/data/network/: MqttRemoteManager.kt  SelfSignedTrustManager.kt  SessionCookieJar.kt  WebSocketManager.kt
android/app/src/main/java/com/aquarium/controller/data/prefs/: ConnectionPreferences.kt
android/app/src/main/java/com/aquarium/controller/di/: NetworkModule.kt
android/app/src/main/java/com/aquarium/controller/repository/: AquariumRepository.kt
android/app/src/main/res/values/: colors.xml  strings.xml  themes.xml
android/gradle/: libs.versions.toml
components/esp_lcd_hx8394/: CMakeLists.txt  esp_lcd_hx8394.c  esp_lcd_hx8394.h
docs/: android_app_guide.md  wiring.md
main/: CMakeLists.txt  Kconfig.projbuild  auto_heater.c  auto_heater.h  co2_controller.c  co2_controller.h  daily_cycle.c  daily_cycle.h  display_driver.c  display_driver.h  display_ui.c  display_ui.h  duckdns.c  duckdns.h  event_log.c  event_log.h  feeding_mode.c  feeding_mode.h  geolocation.c  geolocation.h  idf_component.yml  led_controller.c  led_controller.h  led_scenes.c  led_scenes.h  led_schedule.c  led_schedule.h  main.c  ota_update.c  ota_update.h  relay_controller.c  relay_controller.h  remote_relay.c  remote_relay.h  sd_card.c  sd_card.h  sd_logger.c  sd_logger.h  server.crt  server.key  (+17 more)
main/www/: README.md  index.html  manifest.json  style.css  sw.js
sdmmc/: CMakeLists.txt  sdkconfig  sdkconfig.old
(+20 files in other folders)
